:recycle: Refactor menu nav

--- a/pages/index.html
+++ b/pages/index.html
@@ -14,29 +14,31 @@
     <title>Gisele Araujo Silva</title>
   </head>
   <body>
-    <nav class="nav">
-      <div class="menuLeft">
-        <img
-          class="menuIcon"
-          src="../assets/images/giza.png"
-          alt="Caricatura de Gisele"
-        />
-        <p>Olá , eu sou a Gisele</p>
-      </div>
-      <div>
-        <ul class="menuRight">
-          <a class="link" href="#about">
-            <li class="menuItem">SOBRE</li>
-          </a>
-          <a class="link" href="#skill">
-            <li class="menuItem">HABILIDADES</li>
-          </a>
-          <a class="link" href="#contact">
-            <li class="menuItem">CONTATO</li>
-          </a>
-        </ul>
-      </div>
-    </nav>
+    <header>
+      <nav class="nav">
+        <div class="menuLeft">
+          <img
+            class="menuIcon"
+            src="../assets/images/giza.png"
+            alt="Caricatura de Gisele"
+          />
+          <p>Olá , eu sou a Gisele</p>
+        </div>
+        <div>
+          <ul class="menuRight">
+            <li class="menuItem">
+              <a class="link" href="#about">SOBRE</a>
+            </li>
+            <li class="menuItem">
+              <a class="link" href="#skill">HABILIDADES</a>
+            </li>
+            <li class="menuItem">
+              <a class="link" href="#contact">CONTATO</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
 
     <section class="sectionIntro">
       <img
